# ring-crypto

./: .gitignore  .npmignore  LICENSE  README.md  babel.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.base.json  tsconfig.json  tslint.json
lib/global/: file-loader.d.ts  worker_threads.d.ts
src/: index.ts
src/c_crypto/: ATTRIBUTIONS.md  CMakeLists.txt  README.md  main.cpp
src/c_crypto/include/: CryptoTypes.h  memwipe.h  mlocker.cpp  mlocker.h  span.h  syncobj.h  warnings.h  wipeable_string.h
src/c_crypto/include/sodium/: crypto_verify_32.h  export.h
src/c_crypto/jsHooks/: posthook.js  prehook.js
src/c_crypto/src/: CMakeLists.txt  chacha8.c  chacha8.h  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  generic-ops.h  hash-ops.h  hash.h  nacl.c  nacl.h  random.c  random.h  wasmUtil.h
src/c_crypto/src/common/: Varint.h
src/core/: index.ts
src/core/common/: byte-length-guard.ts  emitter.ts
src/core/crypto/core/: crypto-node.ts  crypto-relay.ts  crypto-serialize.ts  index.ts
src/core/crypto/core/factories/: box-factory.ts  hash-factory.ts  random-factory.ts  ring-sign-factory.ts  secret-box-factory.ts  sign-factory.ts
src/core/crypto/core/interfaces/: i-box.ts  i-crypto.ts  i-hash.ts  i-ring-sign.ts  i-secret-box.ts  i-sign.ts
src/core/crypto/core/wasm/: crypto-wasm-types.ts  crypto-wasm.ts  wasm-crypto-interface.ts
src/utility/: Uint8Array-ext.ts  buffer-util.ts  index.ts  promise-ext.ts  string-ext.ts
test/: crypto-api.ts  crypto-perf.ts  crypto-wasm.ts  index.ts  test-shared.ts
